# ApexTrade

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  backtests.py  market_data.py  portfolios.py  strategies.py  trades.py  users.py
backend/app/core/: celery_app.py  database.py  events.py  redis.py  security.py
backend/app/integrations/: alpaca.py  base.py  binance.py  yfinance_provider.py
backend/app/models/: __init__.py  backtest.py  base.py  portfolio.py  strategy.py  trade.py  user.py
backend/app/schemas/: auth.py  backtest.py  market_data.py  portfolio.py  strategy.py  trade.py  user.py
backend/app/services/: backtest_service.py  execution_service.py  market_data_service.py  portfolio_service.py  rule_engine.py  strategy_service.py
backend/app/tasks/: backtest.py  execution.py  market_data.py  strategy.py
backend/app/utils/: indicators.py  validators.py
backend/scripts/: fetch_historical_data.py  seed_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_strategies_api.py
backend/tests/unit/: test_indicators.py  test_rule_engine.py
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  PRD.md  TECHNICAL_SPEC.md
docs/diagrams/: container-topology.md  data-flow.md  system-architecture.md
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/backtests/: page.tsx
frontend/src/app/dashboard/backtests/[id]/: page.tsx
frontend/src/app/dashboard/portfolios/: page.tsx
frontend/src/app/dashboard/portfolios/[id]/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/strategies/: page.tsx
frontend/src/app/dashboard/strategies/[id]/: page.tsx
frontend/src/app/dashboard/strategies/new/: page.tsx
frontend/src/components/charts/: candlestick-chart.tsx  equity-curve.tsx  pie-chart.tsx
frontend/src/components/dashboard/: metrics-card.tsx  portfolio-card.tsx  recent-trades.tsx  rule-builder.tsx  strategy-card.tsx
frontend/src/components/forms/: login-form.tsx  register-form.tsx  strategy-form.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  mobile-nav.tsx  sidebar.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  toast.tsx
frontend/src/hooks/: use-auth.ts  use-portfolio.ts  use-strategies.ts  use-websocket.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts  websocket.ts
frontend/src/stores/: auth-store.ts  portfolio-store.ts
frontend/src/types/: api.ts  portfolio.ts  strategy.ts  trade.ts  user.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: apextrade.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: build.ps1  build.sh  dev.ps1  dev.sh  setup.ps1  setup.sh
